--- a/app/src/main/res/layout/list_item_car.xml
+++ b/app/src/main/res/layout/list_item_car.xml
@@ -17,7 +17,7 @@
 
         <ImageView
             android:id="@+id/list_item_car_photo"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:elevation="2dp"
             android:layout_marginStart="25dp"
@@ -35,7 +35,7 @@
             android:textAlignment="textStart"
             android:textColor="@color/dark_grey"
             android:textSize="16sp"
-            android:fontFamily="@font/maven_pro"
+            android:fontFamily="@font/maven_pro_medium"
             android:layout_marginStart="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/list_item_car_photo"
