--- a/app/src/main/res/layout/list_item_classification.xml
+++ b/app/src/main/res/layout/list_item_classification.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="35dp"
+    android:layout_height="50dp"
     android:layout_width="match_parent"
     app:cardElevation="2dp"
     app:cardCornerRadius="8dp"
@@ -17,7 +17,7 @@
 
         <ImageView
             android:id="@+id/list_item_classification_photo"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:elevation="2dp"
             android:layout_marginStart="25dp"
@@ -35,7 +35,7 @@
             android:textAlignment="textStart"
             android:textColor="@color/dark_grey"
             android:textSize="16sp"
-            android:fontFamily="@font/maven_pro"
+            android:fontFamily="@font/maven_pro_medium"
             android:layout_marginStart="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/list_item_classification_photo"
