Update layouts bets and calendar

--- a/app/src/main/res/layout/list_item_5.xml
+++ b/app/src/main/res/layout/list_item_5.xml
@@ -19,6 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textSize="16sp"
+        android:textColor="@color/dark_grey"
+        android:fontFamily="@font/maven_pro_medium"
         android:layout_gravity="center_vertical"
         android:layout_margin="10dp"
         android:textAppearance="?attr/textAppearanceListItem" />
