--- a/app/src/main/res/layout/list_item_6.xml
+++ b/app/src/main/res/layout/list_item_6.xml
@@ -7,7 +7,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         app:cardBackgroundColor="@color/white"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -22,6 +22,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="left|center"
             android:textSize="16sp"
+            android:textColor="@color/dark_grey"
+            android:fontFamily="@font/maven_pro_medium"
             android:layout_marginTop="5dp"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="20dp"
@@ -33,7 +35,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center"
+            android:fontFamily="@font/maven_pro_medium"
             android:textSize="16sp"
+            android:textColor="@color/dark_grey"
             android:layout_marginTop="5dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="10dp"
