--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -14,10 +14,15 @@
         android:layout_alignParentTop="true">
     </CalendarView>
 
+    <LinearLayout android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/calendar"
+        >
+
     <androidx.cardview.widget.CardView
         android:layout_width="100dp"
         android:layout_height="match_parent"
-        android:layout_below="@id/calendar"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardElevation="0dp"
         tools:ignore="MissingConstraints">
@@ -46,10 +51,11 @@
 
     <TextView
         android:id="@+id/eventDesc"
-        android:layout_width="300dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/calendar"
         android:layout_marginTop="7dp"
         android:layout_gravity="right"
         android:layout_alignParentRight="true"/>
+    </LinearLayout>
 </RelativeLayout>
