--- a/app/src/main/res/layout/list_events.xml
+++ b/app/src/main/res/layout/list_events.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context="com.ipca.formulaworld.ui.calendar.EventsFragment"
     android:orientation="vertical">
 
@@ -52,7 +52,7 @@
 
 
 <androidx.cardview.widget.CardView
-    android:layout_width="260dp"
+    android:layout_width="240dp"
     android:layout_height="200dp"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="8dp"
@@ -76,6 +76,7 @@
             android:layout_height="wrap_content"
             android:background="@color/dark_blue"
             android:textColor="@color/light_blue"
+            android:textAlignment="center" 
             android:textSize="15sp"
             android:textStyle="bold"/>
 
